--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node ace build --production",
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "postinstall": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +38,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.1",
     "typescript": "~4.6",
@@ -47,6 +50,7 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.0",
+    "axios": "^1.2.1",
     "luxon": "^3.1.1",
     "pg": "^8.8.0",
     "proxy-addr": "^2.0.7",
