--- a/.github/workflows/deploy-base.yaml
+++ b/.github/workflows/deploy-base.yaml
@@ -8,7 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      ACCOUNT_ID: 337340014514
+      ACCOUNT_ID:  ${{  secrets.AWS_ACCOUNT_ID }}
       AWS_REGION: us-east-1
       AWS_ACCESS_KEY_ID: ${{  secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
