chore: Create Readme file

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,4 @@ PG_PASSWORD=
 PG_DB_NAME=lucid
 
 # Ghibli API
-SEARCH_MOVIE_API_URL=http://localhost:3000
+SEARCH_MOVIE_API_URL=http://ghibli-api.softdevelopments.com.br
