--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
+    "test": "node ace test",
+    "test:unit": "node ace test unit",
     "postinstall": "husky install"
   },
   "eslintConfig": {
@@ -29,6 +31,7 @@
   ],
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.5",
+    "@faker-js/faker": "^7.6.0",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.2.2",
     "@types/proxy-addr": "^2.0.0",
@@ -40,6 +43,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
+    "nock": "^13.2.9",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.1",
     "typescript": "~4.6",
