--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.2.2",
     "@types/proxy-addr": "^2.0.0",
+    "@types/sinon": "^10.0.13",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.29.0",
@@ -46,6 +47,7 @@
     "nock": "^13.2.9",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.1",
+    "sinon": "^15.0.0",
     "typescript": "~4.6",
     "youch": "^3.2.2",
     "youch-terminal": "^2.1.5"
