--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -49,6 +49,12 @@
     "@japa/preset-adonis/TestsProvider"
   ],
   "metaFiles": [
-    "docs"
-  ]
+    {
+      "pattern": "assets/**",
+      "reloadServer": false
+    }
+  ],
+  "directories": {
+    "public": "assets"
+  }
 }
