--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format": "prettier --write .",
     "test": "node ace test",
     "test:unit": "node ace test unit",
-    "postinstall": "husky install",
-    "postbuild": "node ace swagger:generate && cp -a docs/ build/docs"
+    "postinstall": "husky install"
   },
   "eslintConfig": {
     "extends": [
